[package]
name        = "ucg"
version     = "0.2.2"
authors     = ["Jeremy Wall <jeremy@marzhillstudios.com>"]
description = "A configuration generation grammar."
repository  = "https://github.com/zaphar/ucg"
documentation = "https://docs.rs/crate/ucg"
readme      = "README.md"
keywords    = ["compiler", "config"]
license     = "Apache-2.0"

[dependencies]
abortable_parser = "~0.2.2"
clap         = "~2.26.0"
serde_json   = "~1.0.9"
simple-error = "0.1"
serde_yaml = "~0.8.1"

[dev-dependencies]
bencher = "~0.1.5"
cpuprofiler = "0.0.3"

[[bench]]
name = "parse"
harness = false
path = "src/benches/parse.rs"

[profile.bench]
opt-level = 0
debug = true
rpath = false
lto = false
debug-assertions = false
codegen-units = 16
incremental = false
overflow-checks = false

[profile.release]
debug = true

[lib]
name = "ucglib"
path = "src/lib.rs"
bench = false

[[bin]]
name = "ucg"
path = "src/main.rs"

[features]
tracing = []