[package]
edition     = "2018"
name        = "ucg"
version     = "0.6.0"
authors     = ["Jeremy Wall <jeremy@marzhillstudios.com>"]
description = "A configuration generation grammar."
repository  = "https://github.com/zaphar/ucg"
documentation = "https://ucg.marzhillstudios.com"
readme      = "README.md"
keywords    = ["compiler", "config"]
license     = "Apache-2.0"
build = "bin/build_main.rs"
include = [
    "std/**/*",
    "src/**/*",
    "bin/build_main.rs",
    "Cargo.toml",
    "Cargo.lock"
]

[dependencies]
abortable_parser = "~0.2.3"
clap         = "~2.26.0"
serde_json   = "~1.0.9"
simple-error = "0.1"
serde_yaml = "~0.8.1"
toml = "~0.4.8"
xml-rs = "0.8.0"
base64 = "0.10.0"
regex = "1"
dirs = "1.0.4"
unicode-segmentation = "1.2.1"

[build-dependencies]
walkdir = "2.2.7"
dirs = "1.0.4"

[dev-dependencies]
bencher = "~0.1.5"

[[bench]]
name = "parse"
harness = false
path = "src/benches/parse.rs"

[profile.bench]
opt-level = 0
debug = true
rpath = false
lto = false
debug-assertions = false
codegen-units = 16
incremental = false
overflow-checks = false

[profile.release]
debug = true

[lib]
name = "ucglib"
path = "src/lib.rs"
bench = false

[[bin]]
name = "ucg"
path = "src/main.rs"

[features]
tracing = []