[package]
name = "ucg-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"

[dependencies.ucg]
path = ".."

# Prevent this from interfering with workspaces
[workspace]
members = ["."]

[[bin]]
name = "tokenize"
path = "fuzz_targets/tokenize.rs"
doc = false

[[bin]]
name = "parse"
path = "fuzz_targets/parse.rs"
doc = false

[[bin]]
name = "compile"
path = "fuzz_targets/compile.rs"
doc = false
